--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "CC-0",
   "private": true,
   "devDependencies": {
+    "prettier": "^1.17.0",
+    "tslint": "^5.16.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.4.5"
   }
 }
